# board-n-pieces

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py
plugin/: Cargo.toml
plugin/macros/: Cargo.toml
plugin/macros/src/: lib.rs
plugin/src/: abi.rs  fen.rs  game.rs  lib.rs  model.rs  pgn.rs  san.rs  utils.rs
src/: .exclude  README.md  internals.typ  lib.typ  marks.typ  tests.typ  typst.toml
tests/: README.md  api.typ  logic.typ  symbols.typ  tests.typ
tests/assets/: lichess-4cCk7Gi5.pgn  lichess-NuxTdFcv.pgn
