[package]
name = "board-n-pieces-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol", rev = "637508c" }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
